# job-search

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml
applications/: AGENTS.md  schema.md  tracker.csv
applications/jobs/_template/: job_info.py  outreach.md
config/: job_search_config.yaml  platforms.yaml
coverletter/: AGENTS.md  __init__.py  cl2latex.py  cl_utils.py
coverletter/outputs/: nvidia_ml_eng_2026.fdb_latexmk  nvidia_ml_eng_2026.fls
coverletter/tailoring/: _template.py
docs/: resume-writing-reference.md
networking/: AGENTS.md  message_templates.md  strategy.md
profile/: AGENTS.md  CHANGELOG.md  coursework.py  education.py  experience.py  header.py  master_data.py  projects.py  research.py  skills.py  summaries.py
resume/: AGENTS.md  cv2latex.py  cv_utils.py
resume/tailoring/: AGENTS.md  _template.py  example_acme_ml_2026.py
scripts/: AGENTS.md  ai_tailor.py  build.py  data_paths.py  job_discovery.py  llm_provider.py  new_application.py  track.py  update_profile.py
skills/: README.md  SETUP.md
skills/build-documents/: SKILL.md
skills/discover-jobs/: SKILL.md
skills/networking-outreach/: SKILL.md
skills/new-application/: SKILL.md
skills/tailor-resume/: SKILL.md
skills/track-application/: SKILL.md
skills/update-profile/: SKILL.md
